--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -17,6 +17,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
+          cache: "yarn"
       - run: yarn install
       - run: yarn prettier:check
