Added link to eth research post

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ dist
 app/styles/pages/standards.scss
 public/home-background.svg.bak
 public/home-background1.svg
+public/assets/ttt.svg.bak
+public/assets/ttt.svg
+public/assets/ttt-favicon.ico
+public/assets/rps-logo.png
+public/assets/rock_badge.svg
